@@ -1,3 +1,10 @@
+2006-04-14  Vivien Malerba <malerba@gnome-db.org>
+
+	* libgda-gda-dict.[ch]: added gda_dict_get_handler()
+	* libgda/gda-data-model-query.c: documentation improvements
+	* libgda/gda-server-provider.c: improvements in gda_server_provider_string_to_value()
+	* doc/C/query.xml: better explanations for query parameter's syntax
+
 2006-04-09  Vivien Malerba <malerba@gnome-db.org>
 
 	* providers/postgres/gda-postgres-provider.c: applied patch from Chris Shoemaker
